--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-<div id="app"></div>
+<div id="🧩"></div>
+
+<h2>Game ideas</h2>
+
+<p>Economic strategy with a timeline</p>
+<ul>
+  <li>Buildings: produce units and resources</li>
+  <li>Units: work in the buildings</li>
+  <li>Natural resources: places with a resource</li>
+  <li>Resources: are consumed to create new things</li>
+  <li>Events: something good or bad can happen</li>
+  <li>Enemy: destroies the player base</li>
+  <li>Ally: works together by sharing resources and help</li>
+</ul>
+
+<h3>Strategy "Timeline"</h3>
+<p>
+  The idea is to be constantly in change, sometime player will advance, other
+  times he will retreat. He can start as a farmer and become a king. The player
+  is not a single character, instead he will manage units that will work and
+  produce resources. Resources should be alive, and change it time. Events will
+  move the game and provide the challenge in the game.
+</p>
+
+<h3>Strategy "Cell"</h3>
+<p>
+  Units can be cells, single cell organisms that can multiply by clonning
+  themselves. They can also mutate and become another type of organism. In this
+  game, some mutation may be good and keep the game going, and other mutations
+  will become dangerous and will be considered an enemy. The starting animation
+  can be different particles that assemble together in a single cell.
+</p>
+
+<h3>RPG "Soul"</h3>
+<p>
+  The player is a soul, and he will start the game by being born in a family.
+  This will give him a starting point, a body and some resources, like food for
+  a few years, time to learn some skills. At some point he may become
+  independent. He can do anything, as there won't be any quests, but arround him
+  events will happen. When the player dies, he losses the body and resources.
+  But, he can wait to be born again in another body at a different place and
+  time. On death, he will receive karma (good or bad) that he can use in the
+  next life to be more lucky. Karma is the score of the game.
+</p>
