--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<div id="🧩"></div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tmln</title>
+    <script src="./index.js" defer></script>
+  </head>
+  <body>
+    <div id="🧩"></div>
+  </body>
+</html>
